# pmat

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  gcovr.cfg
src/: AnalyticsBaseTable.cpp  AnalyticsBaseTable.h  Array.h  CMakeLists.txt  Container1d.cpp  Container1d.h  DCholesky.cpp  DCholesky.h  DPLU_MatrixSquare.cpp  DPLU_MatrixSquare.h  DPQR_MatrixSquare.cpp  DPQR_MatrixSquare.h  DSAS_MatrixSquare.cpp  DSAS_MatrixSquare.h  DecompositionCholesky.cpp  DecompositionCholesky.h  DecompositionPLU.cpp  DecompositionPLU.h  DecompositionPQR.cpp  DecompositionPQR.h  DecompositionSAS.cpp  DecompositionSAS.h  LAnalyticsBaseTable.cpp  LAnalyticsBaseTable.h  LLearningModel.cpp  LLearningModel.h  LLinearOLS.cpp  LLinearOLS.h  LLinearOLS_GD.cpp  LLinearOLS_GD.h  LLinearOrdinaryLeastSquares.cpp  LLinearOrdinaryLeastSquares.h  LQuery.cpp  LQuery.h  LWeightedNN.cpp  LWeightedNN.h  LinearOrdinaryLeastSquares.cpp  LinearOrdinaryLeastSquares.h  Matrix.cpp  Matrix.h  (+28 more)
test/: CMakeLists.txt  matest.txt  pequeno.txt  pmat_test.cpp  tAnalyticsBaseTable.h  tLinearOrdinaryLeastSquares.h  tMatrix.h  tMatrixSkewSymmetric.h  tMatrixSquare.h  tMatrixSymmetric.h  tMatrixTriangular.h  tNearestNeighbor.h  tVector.h  testAnalyitcCorr.nb  testAnalyticalMinimum.nb  testGD.nb  testGDCorr.nb  vetest.txt
